vendor/thiserror-1.0.24/tests/ui/concat-display.stderr
error: expected string literal
  --> $DIR/concat-display.rs:8:17
   |
8  |         #[error(concat!("invalid ", $what))]
   |                 ^^^^^^
...
13 | error_type!(Error, "foo");
   | -------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
